Repositioned Login, Changed Font Family, Readjusted Font Weight & Color

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Yellowtail&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Yellowtail&family=Londrina+Solid:wght@300&display=swap');
       </style>
   </head>
   <body>
